--- a/scientificCenter/src/app/login/login.component.html
+++ b/scientificCenter/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <br />
     <p style="font-weight: 700; font-size: 15px;">Login</p>
     <hr>
@@ -20,7 +20,7 @@
 
         <hr>
         <div>
-            <button style="float: right;" class="btn btn-primary btn-m2" [disabled]="loading">Login</button>
+            <button style="float: right;" type="button" class="btn btn-primary-green" [disabled]="loading">Login</button>
         </div>
     </form>
 </div>
