--- a/scientificCenter/src/styles.css
+++ b/scientificCenter/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
 .btn-m2 {
     margin: 2px auto;
 }
@@ -15,7 +15,13 @@
     justify-content: center;
 }
 
-.form-control-checkbox {
+.btn-primary-green {
+    background-color: forestgreen;
+    color: white;
+    border: 2px solid greenyellow;
+}
+
+.checkbox {
     width: 10%;
     height: 1.6em;
     margin: 0.4rem;
@@ -28,4 +34,20 @@
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.container {
+    display: flex;
+    margin: 32px auto;
+    padding: 0 16px;
+    flex-direction: row;
+}
+
+.container>div {
+    flex: 1;
+}
