--- a/scientificCenter/src/app/login/login.component.html
+++ b/scientificCenter/src/app/login/login.component.html
@@ -20,7 +20,7 @@
 
         <hr>
         <div>
-            <button style="float: right;" type="button" class="btn btn-primary-green" [disabled]="loading">Login</button>
+            <button style="float: right;" class="btn btn-primary-green" type="submit" (click)="onSubmit()">Login</button>
         </div>
     </form>
 </div>
